--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini Allo-ciné</title>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+
+<body id="body">
+    <header>
+        <nav class="navbar navbar-expand-lg mb-4">
+            <div class="container justify-content-center">
+                <span class="navbar-text">
+                  Projet Mini
+                </span>
+                <img src="https://play-lh.googleusercontent.com/DdGcM5XX0vUIdH8mdHkPPk_Ex5JIlbNJG_ebGmyAnLNlahjej32Sty6NnnKOog8mwfI">
+            </div>
+          </nav>
+
+    </header>
+
+    <div class="container justify-content-center">
+        <div class="moovies d-flex justify-content-center flex-wrap"></div>
+    </div>
 
 
 
 
-    <script src=""></script>
-    <script src=""></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous""></script>
+    <script src="./js/main.js"></script>
     <script src=""></script>
 </body>
 </html>
